--- a/views/admin/admin.html
+++ b/views/admin/admin.html
@@ -26,7 +26,7 @@
             <h2>News Posts</h2>
             <ul class="list-group">
                 {% for post in posts %}
-                <li class="list-group-item">
+                <li class="list-group-item {{'published' if post.published}}">
                     <a href="/admin/post/{{post.slug}}">
                         <h3 class="list-group-item-heading">{{post.title}}</h3>
                     </a>
