Landing styles and font variables

--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,6 @@
 body {
     background-image:url(/img/slats.jpg);
-    font-family:'Open Sans', sans-serif;
+    font-family:@body-font, sans-serif;
 }
 a{
     &:link{
@@ -14,7 +14,7 @@ a{
     }
 }
 h1,h2,h3{
-    font-family:'Duru Sans', sans-serif;
+    font-family:@title-font, sans-serif;
     color:@primary;
     a{
         &:link,&:visited{
