--- a/less/pages/landing.less
+++ b/less/pages/landing.less
@@ -12,12 +12,20 @@
         p.upcoming{
             margin-top:1.5em;
             padding-left:.3em;
+            .class-name{
+                font-family:@title-font;
+            }
             time{
                 display:block;
                 width:100%;
                 padding-left:2em;
                 border-left:1px solid @variantDark;
 
+            }
+            .class-instructor{
+                .pull-right();
+                font-style: italic;
+                font-sizes:.98;
             }
         }
     }
