--- a/less/fonts.less
+++ b/less/fonts.less
@@ -24,3 +24,5 @@
   font-weight: 400;
   src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/xjAJXh38I15wypJXxuGMBobN6UDyHWBl620a-IRfuBk.woff) format('woff');
 }
+@title-font: 'Duru Sans';
+@body-font: 'Open Sans';
