--- a/public/styles/ananda.css
+++ b/public/styles/ananda.css
@@ -5211,11 +5211,19 @@ main .affix-bottom {
   margin-top: 1.5em;
   padding-left: .3em;
 }
+.landing #left p.upcoming .class-name {
+  font-family: 'Duru Sans';
+}
 .landing #left p.upcoming time {
   display: block;
   width: 100%;
   padding-left: 2em;
   border-left: 1px solid #295ca3;
+}
+.landing #left p.upcoming .class-instructor {
+  float: right !important;
+  font-style: italic;
+  font-sizes: .98;
 }
 .landing #welcome {
   padding: 19px;
@@ -5270,6 +5278,24 @@ main .affix-bottom {
 }
 .classes #classes-nav .nav-pills {
   border-radius: 4px;
+  /* Small devices (tablets, 768px and up) */
+  /* Medium devices (desktops, 992px and up) */
+  /* Large devices (large desktops, 1200px and up) */
+}
+@media (min-width: 768px) {
+  .classes #classes-nav .nav-pills#affix {
+    width: 220px;
+  }
+}
+@media (min-width: 992px) {
+  .classes #classes-nav .nav-pills#affix {
+    width: 220px;
+  }
+}
+@media (min-width: 1200px) {
+  .classes #classes-nav .nav-pills#affix {
+    width: 263px;
+  }
 }
 .note-editable {
   background-color: white;
