Removed "Common" and "Page" nonsense

--- a/views/layout.html
+++ b/views/layout.html
@@ -13,7 +13,7 @@
 
 
 
-    <title>{%block title%}{{title}}{%endblock%}</title>
+    <title>{{title +" | " if title}} Ananda Yoga</title>
 </head>
 
 <body {%block bodyattr%}{%endblock%}>
