Added 404 and refactored error msgs

--- a/views/error.html
+++ b/views/error.html
@@ -2,6 +2,6 @@
 {% block main %}
 <div class="card">
     <h1>Whoooaa!</h1>
-    <p>You just hit a <strong>{{code}}</strong> error. <br>That means somethings go wrong on our side - sorry about that. We'll strive to get things working again ASAP!</p>
+    <p>You just hit a <strong>{{code}}</strong> error. <br>{{message}}</p>
 </div>
 {% endblock %}
