less home styles update

--- a/less/ananda.less
+++ b/less/ananda.less
@@ -8,7 +8,7 @@
 @import "header.less";
 @import "main.less";
 
-@import "pages/landing.less";
+@import "pages/home.less";
 @import "pages/schedule.less";
 @import "pages/classes.less";
 @import "pages/instructors.less";
