--- a/less/fontawesome/icons.less
+++ b/less/fontawesome/icons.less
@@ -1,6 +1,66 @@
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
    readers do not read off random characters that represent icons */
 
+.@{fa-css-prefix}-unlink:before,
+.@{fa-css-prefix}-chain-broken:before { content: @fa-var-chain-broken; }
+.@{fa-css-prefix}-question:before { content: @fa-var-question; }
+.@{fa-css-prefix}-info:before { content: @fa-var-info; }
+.@{fa-css-prefix}-exclamation:before { content: @fa-var-exclamation; }
+.@{fa-css-prefix}-superscript:before { content: @fa-var-superscript; }
+.@{fa-css-prefix}-subscript:before { content: @fa-var-subscript; }
+.@{fa-css-prefix}-eraser:before { content: @fa-var-eraser; }
+
+.@{fa-css-prefix}-youtube-play:before { content: @fa-var-youtube-play; }
+.@{fa-css-prefix}-bullhorn:before { content: @fa-var-bullhorn; }
+.@{fa-css-prefix}-chain:before,
+.@{fa-css-prefix}-link:before { content: @fa-var-link; }
+.@{fa-css-prefix}-cloud:before { content: @fa-var-cloud; }
+.@{fa-css-prefix}-flask:before { content: @fa-var-flask; }
+.@{fa-css-prefix}-cut:before,
+.@{fa-css-prefix}-scissors:before { content: @fa-var-scissors; }
+.@{fa-css-prefix}-copy:before,
+.@{fa-css-prefix}-files-o:before { content: @fa-var-files-o; }
+.@{fa-css-prefix}-paperclip:before { content: @fa-var-paperclip; }
+.@{fa-css-prefix}-save:before,
+.@{fa-css-prefix}-floppy-o:before { content: @fa-var-floppy-o; }
+.@{fa-css-prefix}-square:before { content: @fa-var-square; }
+.@{fa-css-prefix}-bars:before { content: @fa-var-bars; }
+.@{fa-css-prefix}-list-ul:before { content: @fa-var-list-ul; }
+.@{fa-css-prefix}-list-ol:before { content: @fa-var-list-ol; }
+.@{fa-css-prefix}-strikethrough:before { content: @fa-var-strikethrough; }
+.@{fa-css-prefix}-underline:before { content: @fa-var-underline; }
+.@{fa-css-prefix}-table:before { content: @fa-var-table; }
+.@{fa-css-prefix}-magic:before { content: @fa-var-magic; }
+
+.@{fa-css-prefix}-trash-o:before { content: @fa-var-trash-o; }
+.@{fa-css-prefix}-print:before { content: @fa-var-print; }
+.@{fa-css-prefix}-camera:before { content: @fa-var-camera; }
+.@{fa-css-prefix}-font:before { content: @fa-var-font; }
+.@{fa-css-prefix}-bold:before { content: @fa-var-bold; }
+.@{fa-css-prefix}-italic:before { content: @fa-var-italic; }
+.@{fa-css-prefix}-text-height:before { content: @fa-var-text-height; }
+.@{fa-css-prefix}-text-width:before { content: @fa-var-text-width; }
+.@{fa-css-prefix}-align-left:before { content: @fa-var-align-left; }
+.@{fa-css-prefix}-align-center:before { content: @fa-var-align-center; }
+.@{fa-css-prefix}-align-right:before { content: @fa-var-align-right; }
+.@{fa-css-prefix}-align-justify:before { content: @fa-var-align-justify; }
+.@{fa-css-prefix}-list:before { content: @fa-var-list; }
+.@{fa-css-prefix}-dedent:before,
+.@{fa-css-prefix}-outdent:before { content: @fa-var-outdent; }
+.@{fa-css-prefix}-indent:before { content: @fa-var-indent; }
+
+.@{fa-css-prefix}-calendar:before { content: @fa-var-calendar; }
+.@{fa-css-prefix}-video-camera:before { content: @fa-var-video-camera; }
+.@{fa-css-prefix}-picture-o:before { content: @fa-var-picture-o; }
+.@{fa-css-prefix}-pencil:before { content: @fa-var-pencil; }
+.@{fa-css-prefix}-map-marker:before { content: @fa-var-map-marker; }
+.@{fa-css-prefix}-adjust:before { content: @fa-var-adjust; }
+.@{fa-css-prefix}-tint:before { content: @fa-var-tint; }
+.@{fa-css-prefix}-edit:before,
+.@{fa-css-prefix}-pencil-square-o:before { content: @fa-var-pencil-square-o; }
+
+.@{fa-css-prefix}-gears:before,
+.@{fa-css-prefix}-cogs:before { content: @fa-var-cogs; }
 /* .@{fa-css-prefix}-glass:before { content: @fa-var-glass; }
 .@{fa-css-prefix}-music:before { content: @fa-var-music; }
 .@{fa-css-prefix}-search:before { content: @fa-var-search; }
@@ -21,7 +81,6 @@
 .@{fa-css-prefix}-signal:before { content: @fa-var-signal; }
 .@{fa-css-prefix}-gear:before,
 .@{fa-css-prefix}-cog:before { content: @fa-var-cog; }
-.@{fa-css-prefix}-trash-o:before { content: @fa-var-trash-o; }
 .@{fa-css-prefix}-home:before { content: @fa-var-home; }
 .@{fa-css-prefix}-file-o:before { content: @fa-var-file-o; }
 .@{fa-css-prefix}-clock-o:before { content: @fa-var-clock-o; }
@@ -46,32 +105,7 @@
 .@{fa-css-prefix}-tag:before { content: @fa-var-tag; }
 .@{fa-css-prefix}-tags:before { content: @fa-var-tags; }
 .@{fa-css-prefix}-book:before { content: @fa-var-book; }
-.@{fa-css-prefix}-bookmark:before { content: @fa-var-bookmark; }*/
-.@{fa-css-prefix}-print:before { content: @fa-var-print; }
-.@{fa-css-prefix}-camera:before { content: @fa-var-camera; }
-.@{fa-css-prefix}-font:before { content: @fa-var-font; }
-.@{fa-css-prefix}-bold:before { content: @fa-var-bold; }
-.@{fa-css-prefix}-italic:before { content: @fa-var-italic; }
-.@{fa-css-prefix}-text-height:before { content: @fa-var-text-height; }
-.@{fa-css-prefix}-text-width:before { content: @fa-var-text-width; }
-.@{fa-css-prefix}-align-left:before { content: @fa-var-align-left; }
-.@{fa-css-prefix}-align-center:before { content: @fa-var-align-center; }
-.@{fa-css-prefix}-align-right:before { content: @fa-var-align-right; }
-.@{fa-css-prefix}-align-justify:before { content: @fa-var-align-justify; }
-.@{fa-css-prefix}-list:before { content: @fa-var-list; }
-.@{fa-css-prefix}-dedent:before,
-.@{fa-css-prefix}-outdent:before { content: @fa-var-outdent; }
-.@{fa-css-prefix}-indent:before { content: @fa-var-indent; }
-
-.@{fa-css-prefix}-video-camera:before { content: @fa-var-video-camera; }
-.@{fa-css-prefix}-picture-o:before { content: @fa-var-picture-o; }
-.@{fa-css-prefix}-pencil:before { content: @fa-var-pencil; }
-.@{fa-css-prefix}-map-marker:before { content: @fa-var-map-marker; }
-.@{fa-css-prefix}-adjust:before { content: @fa-var-adjust; }
-.@{fa-css-prefix}-tint:before { content: @fa-var-tint; }
-.@{fa-css-prefix}-edit:before,
-.@{fa-css-prefix}-pencil-square-o:before { content: @fa-var-pencil-square-o; }
-/*
+.@{fa-css-prefix}-bookmark:before { content: @fa-var-bookmark; }
 .@{fa-css-prefix}-share-square-o:before { content: @fa-var-share-square-o; }
 .@{fa-css-prefix}-check-square-o:before { content: @fa-var-check-square-o; }
 .@{fa-css-prefix}-arrows:before { content: @fa-var-arrows; }
@@ -116,8 +150,7 @@
 .@{fa-css-prefix}-eye-slash:before { content: @fa-var-eye-slash; }
 .@{fa-css-prefix}-warning:before,
 .@{fa-css-prefix}-exclamation-triangle:before { content: @fa-var-exclamation-triangle; }
-.@{fa-css-prefix}-plane:before { content: @fa-var-plane; }*/
-.@{fa-css-prefix}-calendar:before { content: @fa-var-calendar; }/*
+.@{fa-css-prefix}-plane:before { content: @fa-var-plane; }
 .@{fa-css-prefix}-random:before { content: @fa-var-random; }
 .@{fa-css-prefix}-comment:before { content: @fa-var-comment; }
 .@{fa-css-prefix}-magnet:before { content: @fa-var-magnet; }
@@ -133,9 +166,7 @@
 .@{fa-css-prefix}-twitter-square:before { content: @fa-var-twitter-square; }
 .@{fa-css-prefix}-facebook-square:before { content: @fa-var-facebook-square; }
 .@{fa-css-prefix}-camera-retro:before { content: @fa-var-camera-retro; }
-.@{fa-css-prefix}-key:before { content: @fa-var-key; } */
-.@{fa-css-prefix}-gears:before,
-.@{fa-css-prefix}-cogs:before { content: @fa-var-cogs; }/* 
+.@{fa-css-prefix}-key:before { content: @fa-var-key; }
 .@{fa-css-prefix}-comments:before { content: @fa-var-comments; }
 .@{fa-css-prefix}-thumbs-o-up:before { content: @fa-var-thumbs-o-up; }
 .@{fa-css-prefix}-thumbs-o-down:before { content: @fa-var-thumbs-o-down; }
@@ -160,8 +191,7 @@
 .@{fa-css-prefix}-unlock:before { content: @fa-var-unlock; }
 .@{fa-css-prefix}-credit-card:before { content: @fa-var-credit-card; }
 .@{fa-css-prefix}-rss:before { content: @fa-var-rss; }
-.@{fa-css-prefix}-hdd-o:before { content: @fa-var-hdd-o; }*/
-.@{fa-css-prefix}-bullhorn:before { content: @fa-var-bullhorn; }/*
+.@{fa-css-prefix}-hdd-o:before { content: @fa-var-hdd-o; }
 .@{fa-css-prefix}-bell:before { content: @fa-var-bell; }
 .@{fa-css-prefix}-certificate:before { content: @fa-var-certificate; }
 .@{fa-css-prefix}-hand-o-right:before { content: @fa-var-hand-o-right; }
@@ -179,27 +209,8 @@
 .@{fa-css-prefix}-briefcase:before { content: @fa-var-briefcase; }
 .@{fa-css-prefix}-arrows-alt:before { content: @fa-var-arrows-alt; }
 .@{fa-css-prefix}-group:before,
-.@{fa-css-prefix}-users:before { content: @fa-var-users; }*/
-.@{fa-css-prefix}-chain:before,
-.@{fa-css-prefix}-link:before { content: @fa-var-link; }
-.@{fa-css-prefix}-cloud:before { content: @fa-var-cloud; }
-.@{fa-css-prefix}-flask:before { content: @fa-var-flask; }
-.@{fa-css-prefix}-cut:before,
-.@{fa-css-prefix}-scissors:before { content: @fa-var-scissors; }
-.@{fa-css-prefix}-copy:before,
-.@{fa-css-prefix}-files-o:before { content: @fa-var-files-o; }
-.@{fa-css-prefix}-paperclip:before { content: @fa-var-paperclip; }
-.@{fa-css-prefix}-save:before,
-.@{fa-css-prefix}-floppy-o:before { content: @fa-var-floppy-o; }
-.@{fa-css-prefix}-square:before { content: @fa-var-square; }
-.@{fa-css-prefix}-bars:before { content: @fa-var-bars; }
-.@{fa-css-prefix}-list-ul:before { content: @fa-var-list-ul; }
-.@{fa-css-prefix}-list-ol:before { content: @fa-var-list-ol; }
-.@{fa-css-prefix}-strikethrough:before { content: @fa-var-strikethrough; }
-.@{fa-css-prefix}-underline:before { content: @fa-var-underline; }
-.@{fa-css-prefix}-table:before { content: @fa-var-table; }
-.@{fa-css-prefix}-magic:before { content: @fa-var-magic; }/*
-.@{fa-css-prefix}-truck:before { content: @fa-var-truck; }/*
+.@{fa-css-prefix}-users:before { content: @fa-var-users; }
+.@{fa-css-prefix}-truck:before { content: @fa-var-truck; }
 .@{fa-css-prefix}-pinterest:before { content: @fa-var-pinterest; }
 .@{fa-css-prefix}-pinterest-square:before { content: @fa-var-pinterest-square; }
 .@{fa-css-prefix}-google-plus-square:before { content: @fa-var-google-plus-square; }
@@ -290,15 +301,7 @@
 .@{fa-css-prefix}-star-half-o:before { content: @fa-var-star-half-o; }
 .@{fa-css-prefix}-location-arrow:before { content: @fa-var-location-arrow; }
 .@{fa-css-prefix}-crop:before { content: @fa-var-crop; }
-.@{fa-css-prefix}-code-fork:before { content: @fa-var-code-fork; }*/
-.@{fa-css-prefix}-unlink:before,
-.@{fa-css-prefix}-chain-broken:before { content: @fa-var-chain-broken; }
-.@{fa-css-prefix}-question:before { content: @fa-var-question; }
-.@{fa-css-prefix}-info:before { content: @fa-var-info; }
-.@{fa-css-prefix}-exclamation:before { content: @fa-var-exclamation; }
-.@{fa-css-prefix}-superscript:before { content: @fa-var-superscript; }
-.@{fa-css-prefix}-subscript:before { content: @fa-var-subscript; }
-.@{fa-css-prefix}-eraser:before { content: @fa-var-eraser; }/*
+.@{fa-css-prefix}-code-fork:before { content: @fa-var-code-fork; }
 .@{fa-css-prefix}-puzzle-piece:before { content: @fa-var-puzzle-piece; }
 .@{fa-css-prefix}-microphone:before { content: @fa-var-microphone; }
 .@{fa-css-prefix}-microphone-slash:before { content: @fa-var-microphone-slash; }
@@ -367,8 +370,7 @@
 .@{fa-css-prefix}-youtube-square:before { content: @fa-var-youtube-square; }
 .@{fa-css-prefix}-youtube:before { content: @fa-var-youtube; }
 .@{fa-css-prefix}-xing:before { content: @fa-var-xing; }
-.@{fa-css-prefix}-xing-square:before { content: @fa-var-xing-square; }*/
-.@{fa-css-prefix}-youtube-play:before { content: @fa-var-youtube-play; }/*
+.@{fa-css-prefix}-xing-square:before { content: @fa-var-xing-square; }
 .@{fa-css-prefix}-dropbox:before { content: @fa-var-dropbox; }
 .@{fa-css-prefix}-stack-overflow:before { content: @fa-var-stack-overflow; }
 .@{fa-css-prefix}-instagram:before { content: @fa-var-instagram; }
