--- a/client/less/main.less
+++ b/client/less/main.less
@@ -24,6 +24,9 @@ h1,h2,h3{
             color: @primaryLight;
         }
     }
+    i.fa{
+        color: @variantDark;
+    }
 }
 main {
     padding-top: 1em;
