--- a/client/views/home.html
+++ b/client/views/home.html
@@ -68,13 +68,15 @@
             {%for post in posts %}
             <div class="article-wrapper col-xs-12 col-lg-6">
                 <article class="card">
-                    <h1>
-                        <a href="/news/{{post.slug}}">{{post.title}}</a>
-                    </h1>
-                    <time>Published {{post.published | prettyDate}}</time>
-                    <img class="img-thumbnail" src="//lorempixel.com/g/150/150" alt="">
-                    <div class="post-body">{{post.body | safe}}</div>
-                    <a href="/news/{{post.slug}}">Read More..</a>
+                    <div class="article-content">
+                        <h1>
+                            <a href="/news/{{post.slug}}">{{post.title}}</a>
+                        </h1>
+                        <time>Published {{post.published | prettyDate}}</time>
+                        <div class="post-body">{{post.body | safe}}</div>
+                        <a href="/news/{{post.slug}}">Read More..</a>
+                    </div>
+                    <img src="//lorempixel.com/250/250" alt="">
                 </article>
             </div>{%endfor%}
         </section>
