--- a/client/public/styles/ananda.css
+++ b/client/public/styles/ananda.css
@@ -5121,12 +5121,21 @@ header {
   background-repeat: no-repeat;
   background-position-y: 50%;
 }
-.navbar-nav li {
-  transition: all .2s;
+@media (min-width: 767px) {
+  .navbar-nav li {
+    transition: all .2s;
+  }
 }
 .navbar-nav li.active,
 .navbar-nav li:hover {
   border-top: 2px solid #295ca3;
+}
+@media (max-width: 767px) {
+  .navbar-nav li.active,
+  .navbar-nav li:hover {
+    font-weight: 700;
+    border-bottom: 2px solid #295ca3;
+  }
 }
 .navbar-nav li.active:hover {
   color: #333333;
@@ -5134,17 +5143,26 @@ header {
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:focus,
-.navbar-default .navbar-nav > .active > a:hover {
-  background-color: none;
-  margin-bottom: -2px;
-}
+.navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > li > a:hover {
-  margin-bottom: -2px;
   background-color: none;
+}
+@media (min-width: 480px) {
+  .navbar-default .navbar-nav > .active > a,
+  .navbar-default .navbar-nav > .active > a:focus,
+  .navbar-default .navbar-nav > .active > a:hover,
+  .navbar-default .navbar-nav > li > a:hover {
+    margin-bottom: -2px;
+  }
 }
 body {
-  background-image: url(/img/slats.jpg);
+  background-color: #f9f9f9;
   font-family: 'Open Sans', sans-serif;
+}
+@media (min-width: 767px) {
+  body {
+    background-image: url(/img/slats.jpg);
+  }
 }
 a:link {
   color: #47a329;
@@ -5189,15 +5207,22 @@ main .affix {
 main .affix-bottom {
   position: absolute;
 }
-.card {
+.home .card {
   margin-bottom: 1em;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  padding: 1em;
-  background-color: #f9f9f9;
-  border-radius: 4px;
-  box-shadow: 5px 6px 15px -2px rgba(0, 0, 0, 0.3);
+  margin-top: 1em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
-.card.no-border {
+@media (min-width: 767px) {
+  .home .card {
+    margin-top: 0;
+    padding: 1em;
+    background-color: #f9f9f9;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    box-shadow: 5px 6px 15px -2px rgba(0, 0, 0, 0.3);
+  }
+}
+.home .card.no-border {
   border-style: none;
 }
 .home #left h2 {
@@ -5227,33 +5252,57 @@ main .affix-bottom {
   font-style: italic;
   font-sizes: .98;
 }
-.home #welcome {
-  padding: 19px;
+@media (max-width: 767px) {
+  .home #welcome.card {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 767px) {
+  .home #welcome {
+    padding: 19px;
+  }
+}
+.home #welcome img {
+  max-width: 50%;
+}
+@media (max-width: 767px) {
+  .home .article-wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 .home .article-wrapper article {
   height: 250px;
   overflow: hidden;
-}
-.home article {
   padding-left: 1em;
   position: relative;
 }
-.home article img {
+@media (max-width: 767px) {
+  .home .article-wrapper article.card {
+    margin: 0;
+  }
+}
+.home .article-wrapper article img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   opacity: .15;
 }
-.home article > .article-content {
+.home .article-wrapper article > .article-content {
   position: relative;
 }
-.home article > .article-content h1 {
+.home .article-wrapper article > .article-content h1 {
   font-size: 1.6em;
   margin-top: 0;
   text-align: center;
 }
-.home article > .article-content time {
+@media (max-width: 767px) {
+  .home .article-wrapper article > .article-content h1 {
+    margin-top: .5em;
+  }
+}
+.home .article-wrapper article > .article-content time {
   font-size: .8em;
   color: #999999;
 }
