--- a/client/views/schedule.html
+++ b/client/views/schedule.html
@@ -5,6 +5,7 @@
 <div class="row">
 
     <div class="col-xs-12 col-md-9 col-md-offset-2">
+        <h2>Schedule</h2>
         <table class="table table-responsive class-schedule">
             <tr>
                 <th>Time</th>
