--- a/client/views/home.html
+++ b/client/views/home.html
@@ -69,7 +69,9 @@
             {%for post in posts %}
             <div class="article-wrapper col-xs-12 col-lg-6">
                 <article class="card">
-                    <img src="//lorempixel.com/250/250" alt="">
+                    {% if post.headerImg %}
+                        <img src="{{post.headerImg}}" alt="Header image for {{post.title}}">
+                    {% endif %}
                     <div class="article-content">
                         <h1>
                             <a href="/news/{{post.slug}}">{{post.title}}</a>
