--- a/client/views/admin/page.html
+++ b/client/views/admin/page.html
@@ -7,7 +7,7 @@
 <!----->
 {%block main%}
 <div class="page-head">
-    <h1>Edit Page: {{page.heading}}<h1>
+    <h1>Edit Page: {{page}}<h1>
 </div>
 <div class="alertBox">
     <div id="form-alert" class="alert alert-dismissable {{'alert-danger' if error}}{{'alert-success' if success}}{{ 'hidden' if not error and not success}}">
