--- a/client/less/main.less
+++ b/client/less/main.less
@@ -41,3 +41,19 @@ main .affix {
 main .affix-bottom {
     position: absolute;
 }
+.card {
+    margin-bottom: 1em;
+    margin-top: 1em;
+    border-bottom: 1px solid rgba(0, 0, 0, .3);
+    @media(min-width:@screen-xs-max){
+        margin-top:0;
+        padding:1em;
+        background-color:@offwhite;
+        border-radius: 4px;
+        border: 1px solid rgba(0, 0, 0, .3);
+        box-shadow: 5px 6px 15px -2px rgba(0, 0, 0, .3);
+    }
+}
+.card.no-border {
+    border-style: none;
+}
