--- a/client/public/styles/ananda.css
+++ b/client/public/styles/ananda.css
@@ -5207,6 +5207,24 @@ main .affix {
 main .affix-bottom {
   position: absolute;
 }
+.card {
+  margin-bottom: 1em;
+  margin-top: 1em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+@media (min-width: 767px) {
+  .card {
+    margin-top: 0;
+    padding: 1em;
+    background-color: #f9f9f9;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    box-shadow: 5px 6px 15px -2px rgba(0, 0, 0, 0.3);
+  }
+}
+.card.no-border {
+  border-style: none;
+}
 .home .card {
   margin-bottom: 1em;
   margin-top: 1em;
