Added list-enum.html and its refactorings

--- a/client/less/ananda.less
+++ b/client/less/ananda.less
@@ -10,8 +10,7 @@
 
 @import "pages/home.less";
 @import "pages/schedule.less";
-@import "pages/classes.less";
-@import "pages/instructors.less";
+@import "pages/items.less";
 @import "pages/admin.less";
 
 @import "footer.less";
