--- a/client/less/pages/items.less
+++ b/client/less/pages/items.less
@@ -1,8 +1,8 @@
-.classes{
-    .class {
+.items{
+    .item {
         padding: 1em;
     }
-    #classes-nav .nav-pills {
+    #item-nav .nav-pills {
         border-radius: 4px;
         /* Small devices (tablets, 768px and up) */
         @media (min-width: @screen-sm-min) { 
