--- a/client/public/styles/ananda.css
+++ b/client/public/styles/ananda.css
@@ -5225,24 +5225,6 @@ main .affix-bottom {
 .card.no-border {
   border-style: none;
 }
-.home .card {
-  margin-bottom: 1em;
-  margin-top: 1em;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-}
-@media (min-width: 767px) {
-  .home .card {
-    margin-top: 0;
-    padding: 1em;
-    background-color: #f9f9f9;
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    box-shadow: 5px 6px 15px -2px rgba(0, 0, 0, 0.3);
-  }
-}
-.home .card.no-border {
-  border-style: none;
-}
 .home #left h2 {
   text-align: right;
   margin: 0;
@@ -5346,27 +5328,27 @@ main .affix-bottom {
 .schedule table.class-schedule td.class-time {
   text-align: center;
 }
-.classes .class {
+.items .item {
   padding: 1em;
 }
-.classes #classes-nav .nav-pills {
+.items #item-nav .nav-pills {
   border-radius: 4px;
   /* Small devices (tablets, 768px and up) */
   /* Medium devices (desktops, 992px and up) */
   /* Large devices (large desktops, 1200px and up) */
 }
 @media (min-width: 768px) {
-  .classes #classes-nav .nav-pills#affix {
+  .items #item-nav .nav-pills#affix {
     width: 220px;
   }
 }
 @media (min-width: 992px) {
-  .classes #classes-nav .nav-pills#affix {
+  .items #item-nav .nav-pills#affix {
     width: 220px;
   }
 }
 @media (min-width: 1200px) {
-  .classes #classes-nav .nav-pills#affix {
+  .items #item-nav .nav-pills#affix {
     width: 263px;
   }
 }
