--- a/client/less/pages/items.less
+++ b/client/less/pages/items.less
@@ -2,6 +2,9 @@
     .item {
         padding: 1em;
     }
+    .label.label-corner-dark {
+        background-color: @cornerDark;
+    }
     #item-nav .nav-pills {
         border-radius: 4px;
         /* Small devices (tablets, 768px and up) */
