--- a/client/public/styles/ananda.css
+++ b/client/public/styles/ananda.css
@@ -3439,7 +3439,73 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 /* @import "breadcrumbs.less"; */
 /* @import "pagination.less"; */
 /* @import "pager.less"; */
-/* @import "labels.less"; */
+.label {
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: bold;
+  line-height: 1;
+  color: #ffffff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+}
+.label[href]:hover,
+.label[href]:focus {
+  color: #ffffff;
+  text-decoration: none;
+  cursor: pointer;
+}
+.label:empty {
+  display: none;
+}
+.btn .label {
+  position: relative;
+  top: -1px;
+}
+.label-default {
+  background-color: #999999;
+}
+.label-default[href]:hover,
+.label-default[href]:focus {
+  background-color: #808080;
+}
+.label-primary {
+  background-color: #428bca;
+}
+.label-primary[href]:hover,
+.label-primary[href]:focus {
+  background-color: #3071a9;
+}
+.label-success {
+  background-color: #5cb85c;
+}
+.label-success[href]:hover,
+.label-success[href]:focus {
+  background-color: #449d44;
+}
+.label-info {
+  background-color: #5bc0de;
+}
+.label-info[href]:hover,
+.label-info[href]:focus {
+  background-color: #31b0d5;
+}
+.label-warning {
+  background-color: #f0ad4e;
+}
+.label-warning[href]:hover,
+.label-warning[href]:focus {
+  background-color: #ec971f;
+}
+.label-danger {
+  background-color: #d9534f;
+}
+.label-danger[href]:hover,
+.label-danger[href]:focus {
+  background-color: #c9302c;
+}
 /* @import "badges.less"; */
 /* @import "jumbotron.less"; */
 .thumbnail {
@@ -5330,6 +5396,9 @@ main .affix-bottom {
 }
 .items .item {
   padding: 1em;
+}
+.items .label.label-corner-dark {
+  background-color: #47a329;
 }
 .items #item-nav .nav-pills {
   border-radius: 4px;
