--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -70,6 +70,9 @@
                         <a href="/classes">Classes</a>
                     </li>
                     <li>
+                        <a href="/workshops">Workshops</a>
+                    </li>
+                    <li>
                         <a href="/pricing">Membership &amp; Pricing</a>
                     </li>
                     {%endif%}
